Fix issue with nth-roots not fitting in math input field
Summary:
Previously, the math input field would not have its height increased when tall elements such as nth roots were added inside, causing those elements to be cut off. Now, these elements cause the math input to increase height so that they are not cut off.

Before:
{F543639}

After:
{F543640}

Test Plan:
- Verified that cube and nth roots now cause the math input field to change size to fit them
- Verified that the changed styles do not affect other parts of the interface in [[ http://localhost:9000/?renderer#content=%7B%22question%22%3A%7B%22content%22%3A%22%5B%5B%E2%98%83%20expression%201%5D%5D%5Cn%5Cn%22%2C%22images%22%3A%7B%7D%2C%22widgets%22%3A%7B%22expression%201%22%3A%7B%22type%22%3A%22expression%22%2C%22alignment%22%3A%22default%22%2C%22static%22%3Afalse%2C%22graded%22%3Atrue%2C%22options%22%3A%7B%22answerForms%22%3A%5B%5D%2C%22buttonSets%22%3A%5B%22basic%22%5D%2C%22functions%22%3A%5B%22f%22%2C%22g%22%2C%22h%22%5D%2C%22times%22%3Afalse%7D%2C%22version%22%3A%7B%22major%22%3A1%2C%22minor%22%3A0%7D%7D%7D%7D%2C%22answerArea%22%3A%7B%22calculator%22%3Afalse%2C%22chi2Table%22%3Afalse%2C%22periodicTable%22%3Afalse%2C%22tTable%22%3Afalse%2C%22zTable%22%3Afalse%7D%2C%22itemDataVersion%22%3A%7B%22major%22%3A0%2C%22minor%22%3A1%7D%2C%22hints%22%3A%5B%5D%7D | Perseus ]]

Reviewers: kevinb, charlie

Reviewed By: kevinb, charlie

Subscribers: jared

Differential Revision: https://phabricator.khanacademy.org/D28137

--- a/stylesheets/exercise-content-package/perseus.less
+++ b/stylesheets/exercise-content-package/perseus.less
@@ -128,7 +128,10 @@
         -webkit-touch-callout: none;
     }
 
-    sup {
+    // We do not apply this styling to MathQuill elements because the
+    // styles interfere with calculation of the size of the container
+    // surrounding the math.
+    sup:not(.mq-non-leaf) {
         font-size: smaller;
         vertical-align: super;
 
